--- a/assets/section-hosen-about.css
+++ b/assets/section-hosen-about.css
@@ -91,7 +91,7 @@
 }
 
 /* Button */
-.hosen-featured__button {
+.hosen-about__button {
   display: inline-flex;
   align-items: center;
   gap: 1rem;
@@ -112,23 +112,23 @@
 }
 
 @media screen and (min-width: 750px) {
-  .hosen-featured__button {
+  .hosen-about__button {
     padding: 1.6rem 3rem;
     font-size: 1.2rem;
   }
 }
 
-.hosen-featured__button:hover {
+.hosen-about__button:hover {
   background-color: rgba(0, 0, 0, 0.95);
   color: #fff;
 }
 
-.hosen-featured__button-text {
+.hosen-about__button-text {
   position: relative;
   z-index: 1;
 }
 
-.hosen-featured__button-icon {
+.hosen-about__button-icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -137,12 +137,12 @@
   transition: transform 0.3s cubic-bezier(0.45, 0, 0.15, 1);
 }
 
-.hosen-featured__button-icon svg {
+.hosen-about__button-icon svg {
   width: 100%;
   height: 100%;
 }
 
-.hosen-featured__button:hover .hosen-featured__button-icon {
+.hosen-about__button:hover .hosen-about__button-icon {
   transform: translate(3px, -3px);
   animation: hosen-arrow-diagonal 0.6s ease-in-out infinite;
 }
