--- a/sections/hosen-about.liquid
+++ b/sections/hosen-about.liquid
@@ -34,9 +34,9 @@
         </div>
         
          {% if section.settings.button_label != blank %}
-          <a href="{{ section.settings.button_link }}" class="hosen-featured__button">
+          <a href="{{ section.settings.button_link }}" class="hosen-about__button">
             <span>{{ section.settings.button_label }}</span>
-            <svg class="hosen-featured__button-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <svg class="hosen-about__button-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <line x1="7" y1="17" x2="17" y2="7"></line>
               <polyline points="7 7 17 7 17 17"></polyline>
             </svg>
