--- a/assets/section-hosen-collection-header.css
+++ b/assets/section-hosen-collection-header.css
@@ -6,20 +6,14 @@
 }
 
 .hosen-collection-header__container {
-  max-width: var(--hosen-container-max-width, 1200px);
+  max-width: var(--hosen-container-max-width);
   margin: 0 auto;
-  padding: 0 var(--hosen-container-padding-mobile, 1.5rem);
+  padding: 0 var(--section-container-padding-mobile, var(--hosen-container-padding-mobile));
 }
 
 @media screen and (min-width: 750px) {
   .hosen-collection-header__container {
-    padding: 0 var(--hosen-container-padding-desktop, 3rem);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hosen-collection-header__container {
-    padding: 0 1rem;
+    padding: 0 var(--section-container-padding-desktop, var(--hosen-container-padding-desktop));
   }
 }
 
