--- a/assets/section-hosen-compare.css
+++ b/assets/section-hosen-compare.css
@@ -8,12 +8,12 @@
 .hosen-compare__container {
   max-width: var(--hosen-container-max-width);
   margin: 0 auto;
-  padding: 0 var(--hosen-container-padding-mobile);
+  padding: 0 var(--section-container-padding-mobile, var(--hosen-container-padding-mobile));
 }
 
 @media screen and (min-width: 750px) {
   .hosen-compare__container {
-    padding: 0 var(--hosen-container-padding-desktop);
+    padding: 0 var(--section-container-padding-desktop, var(--hosen-container-padding-desktop));
   }
 }
 
@@ -365,11 +365,7 @@
   }
 }
 
-@media screen and (max-width: 749px) {
-  .hosen-compare__container {
-    padding: 0 3rem;
-  }
-
+@media screen and (max-width: 750px) {
   .hosen-compare__grid {
     grid-template-columns: 1fr;
     gap: 1.5rem;
