--- a/assets/section-hosen-faq.css
+++ b/assets/section-hosen-faq.css
@@ -4,9 +4,15 @@
 }
 
 .hosen-faq__container {
-  max-width: 1200px;
+  max-width: var(--hosen-container-max-width);
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 0 var(--section-container-padding-mobile, var(--hosen-container-padding-mobile));
+}
+
+@media screen and (min-width: 750px) {
+  .hosen-faq__container {
+    padding: 0 var(--section-container-padding-desktop, var(--hosen-container-padding-desktop));
+  }
 }
 
 
@@ -89,32 +95,28 @@
 
 /* Responsive */
 @media screen and (max-width: 749px) {
-  .hosen-faq__container {
-    padding: 0 1rem;
-  }
-
   .hosen-faq__header {
     margin-bottom: 2rem;
     padding-bottom: 1.5rem;
   }
 
   .hosen-faq__title.h0 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .hosen-faq__title.h1 {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
 
   .hosen-faq__question {
-    padding: 1.25rem 0;
+    padding: 1.5rem 0;
   }
 
   .hosen-faq__question-text {
-    font-size: 0.9rem;
+    font-size: 1.3rem;
   }
 
   .hosen-faq__answer-inner {
-    font-size: 0.85rem;
+    font-size: 1.1rem;
   }
 }
