--- a/assets/section-hosen-heading.css
+++ b/assets/section-hosen-heading.css
@@ -7,7 +7,7 @@
 }
 
 .hosen-heading__container {
-	max-width: 1200px;
+	max-width: var(--hosen-container-max-width);
 	margin: 0 auto;
 }
 
@@ -15,7 +15,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	padding: 0 3rem;
+	padding: 0 var(--section-container-padding-mobile, var(--hosen-container-padding-mobile));
 }
 
 @media screen and (min-width: 750px) {
@@ -24,12 +24,7 @@
 		align-items: flex-end;
 		justify-content: space-between;
 		gap: 1.5rem;
-		padding: 0 5rem;
-	}
-}
-@media screen and (min-width: 1200px) {
-	.hosen-heading__content {
-		padding: 0 1rem;
+		padding: 0 var(--section-container-padding-desktop, var(--hosen-container-padding-desktop));
 	}
 }
 
