--- a/assets/section-hosen-product-dropdowns.css
+++ b/assets/section-hosen-product-dropdowns.css
@@ -4,9 +4,15 @@
 }
 
 .hosen-product-dropdowns__container {
-  max-width: 1200px;
+  max-width: var(--hosen-container-max-width);
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 0 var(--section-container-padding-mobile, var(--hosen-container-padding-mobile));
+}
+
+@media screen and (min-width: 750px) {
+  .hosen-product-dropdowns__container {
+    padding: 0 var(--section-container-padding-desktop, var(--hosen-container-padding-desktop));
+  }
 }
 
 .hosen-product-dropdowns__header {
