--- a/assets/section-hosen-products.css
+++ b/assets/section-hosen-products.css
@@ -8,14 +8,15 @@
 .hosen-products__container {
   max-width: var(--hosen-container-max-width);
   margin: 0 auto;
-  padding: 0 var(--hosen-container-padding-mobile);
+  padding: 0 var(--section-container-padding-mobile, var(--hosen-container-padding-mobile));
 }
 
 @media screen and (min-width: 750px) {
   .hosen-products__container {
-    padding: 0 var(--hosen-container-padding-desktop);
+    padding: 0 var(--section-container-padding-desktop, var(--hosen-container-padding-desktop));
   }
 }
+
 
 /* Grid */
 .hosen-products__grid {
